# Multi-Agentic-Data-Analytics

./: .gitignore  README.md  pyproject.toml
src/: agents.py  app.py  constants.py  data_clean_agent.py  data_clean_agent_tools.py  flow_graph.py  graph.py  index.txt  index_agent.py  manager_agent.py  nodes.py  simple_tool_call_template.py  state.py  ui_agent_tools.py  utils.py
src/runs/3c6bb400-2ada-4681-90d3-d5d0ce12a67d/: index.txt
src/runs/3c6bb400-2ada-4681-90d3-d5d0ce12a67d/data/txt/: 1984.txt
